--- a/assets/css/colors.less
+++ b/assets/css/colors.less
@@ -1,7 +1,7 @@
-@mainColor: #15C9CD;
-@mainColorLight: #d6f8f9;
-@hoverColor: #1ad0d4;
-@inputBorderColor: #bfe5e6;
+@mainColor: #6eb63c;
+@mainColorLight: #c7e9af;
+@hoverColor: #269221;
+@inputBorderColor: #c7e9af;
 
 a:not(.btn) {
     color: @mainColor;
@@ -254,7 +254,17 @@ a:hover, a:focus, .breadcrumb a:hover, .spisok li a:hover {
 }
 
 .content-block--slider {
-    background: #0482AA;
+    background: #79CA41;
+}
+
+.content-block--slider .owl-carousel .item {
+    color: #fff;
+}
+
+.content-block--slider .owl-carousel .item img {
+    height: 450px;
+    width: auto;
+    display: inline-block;
 }
 
 .hamburger-inner, .hamburger-inner::after, .hamburger-inner::before {
@@ -264,6 +274,7 @@ a:hover, a:focus, .breadcrumb a:hover, .spisok li a:hover {
 .wsmenu {
     background-color: @mainColor;
     padding-right: 15px;
+    box-shadow: 0 2px 4px rgba(0,0,0,.2);
 }
 
 .wsmenu > .wsmenu-list > li > .navtext {
