--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2531,7 +2531,7 @@ h2, .h2 {
 .content-slider__item-content{
     position: absolute;
     top: 50%;
-    left: 100px;
+    left: 0;
     transform: translate(0, -50%);
     width: 550px;
 }
@@ -2546,21 +2546,25 @@ h2, .h2 {
 
 .content-slider__item-row--1{
     font-weight: bold;
-    font-size:32px;
+    font-size: 48px;
     line-height: 50px;
 }
 
-.content-slider__item-row--2{
-    margin-bottom: 30px;
+.content-slider__item-row--2,
+.content-slider__item-row--3 {
     line-height: 23px;
     font-weight: bold;
-    font-size: 14px;
     margin-top: 15px;
-    color:#505c7c;
 }
 
-.content-slider__item-row--3{
-    margin-top: 25px;
+.content-slider__item-row--2 {
+    margin-top: 30px;
+    font-size: 36.3px;
+}
+
+.content-slider__item-row--3 {
+    margin-top: 20px;
+    font-size: 28px;
 }
 
 .btn-default--black{
