--- a/assets/css/colors.less
+++ b/assets/css/colors.less
@@ -196,7 +196,7 @@ a:hover, a:focus, .breadcrumb a:hover, .spisok li a:hover {
 .editor-content table > thead > tr > td,
 .editor-content table > tbody > tr > td,
 .editor-content table > tfoot > tr > td {
-    border: 1px solid #ffb7d9;
+    border: 1px solid #6eb63c;
 }
 
 .nav.nav-tabs li a, .nav.nav-tabs li a:focus, .nav.nav-tabs li.active a, .nav.nav-tabs li.active a:hover, .nav.nav-tabs li.active a:focus {
