текущие дорабтоки шаблона

--- a/assets/css/colors.less
+++ b/assets/css/colors.less
@@ -87,8 +87,8 @@ a:not(.btn) {
 
 .wsmenu > .wsmenu-list > li > ul.sub-menu li a:hover,
 .wsmenu > .wsmenu-list > li > .wsshoptabing > .wsshopwp > .wstabitem > li:hover > a {
-    background-color: @mainColor;
-    color: #fff;
+    background-color: #f7f7f7;
+    color: @mainColor;
 }
 
 .wsmenu > .wsmenu-list > li > ul.sub-menu li.active a {
