--- a/assets/css/colors.less
+++ b/assets/css/colors.less
@@ -187,7 +187,7 @@ a:hover, a:focus, .breadcrumb a:hover, .spisok li a:hover {
 }
 
 .editor-content table > tbody > tr > th {
-    background-color: @mainColorLight;
+    background-color: #f7f7f7;
 }
 
 .editor-content table > thead > tr > th,
